[package]
name = "rustler"
version = "0.1.0"
edition = "2021"
description = "Rustler is a Gossip-based Failure Detection library"

[dependencies]
async-trait = "0.1.83"
bincode = "1.3.3"
rand = "0.8.5"
serde = { version = "1.0.216", features = ["derive"] }
thiserror = "2.0.6"
tokio = { version = "1.42.0", features = ["rt", "time", "sync", "macros", "net", "io-util"] }
tracing = { version = "0.1.41", features = ["attributes"] }
uuid = { version = "1.11.0", features = ["v4", "serde"] }
